# QT_exercises

./: README.md
CallGSL/: CMakeCache.txt  CMakeLists.txt  CallGSL  Makefile  cmake_install.cmake  main.cpp
PyQt/: Makefile  PyQt.pro  helloworld.py  helloworld.pyproject
TestLib/: CMakeLists.txt  TestLib_global.h  testlib.cpp  testlib.h
hello_console/: Makefile  hello_console  hello_console.pro  hello_console_zh_CN.ts  main.cpp
hello_cpp/: CMakeLists.txt
test_Bytes/: .qmake.stash  Makefile  main.cpp  my_itoa.cpp  test_Bytes  test_Bytes.h  test_Bytes.pro  test_Bytes.pro.user.0352406.22
test_Endian/: main.c
test_GSL/: .qmake.stash  CMakeLists.txt  Makefile  main.cpp  test_GSL  test_GSL.pro
test_UCHAR/: .qmake.stash  Makefile  main.cpp  test_UCHAR  test_UCHAR.pro  test_UCHAR.pro.user.0352406.22  test_UCHAR.pro.user.4.8-pre1
